swtich from ci github workflow to common action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,26 @@ name: Build
 
 on:
   pull_request:
+    branches: ['**']
   push:
     branches: ['**']
     tags: [v*]
 
 jobs:
   build:
-    uses: Dwolla/jenkins-agents-workflow/.github/workflows/build-docker-image.yml@main
-    with:
-      IMAGE_NAME: dwolla/jenkins-agent-mono-sbt
-      TAG_NAME: MONO_TAG
-    secrets:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build and Push Docker Image
+        uses: Dwolla/jenkins-agents-workflow/.github/actions/build@main
+        with:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          TAG_NAME: MONO_TAG
+          BASE_TAG: 4.13.2-1-jdk11-a73d9b7-f8f446e
+          IMAGE_NAME: dwolla/jenkins-agent-mono-sbt
+          PLATFORMS: linux/amd64
   build-complete:
     needs: build
     runs-on: ubuntu-latest
